--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" href="images/Goescat-Macaron-Line.ico" type="image/x-icon">
 	</head>
 	<body class="is-preload">
 
